--- a/Instafilter/Instafilter/Info.plist
+++ b/Instafilter/Instafilter/Info.plist
@@ -49,8 +49,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We will filter your photo.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>We want to save the filtered photo.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
